Se agrega scope a alumnos y se agregan los test para cada clase

--- a/test/fixtures/alumnos.yml
+++ b/test/fixtures/alumnos.yml
@@ -7,5 +7,10 @@ one:
 
 two:
   nombre: MyString
-  edad: 1
+  edad: 10
   curso_id: 
+
+three:
+  nombre: kjguigkjgkjgkjgkjgjk
+  edad: 15
+  curso_id:
